--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-responsive-modal": "^3.4.0",
+    "react-svg-loader": "^2.1.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
